# CodilityPlusPlus

./: AddNewProblem.sh  README.md
src/: AbsDistinct.hpp  BinaryGap.hpp  Brackets.hpp  CodilitySolutions.h  CountDiv.hpp  Distinct.hpp  FrogJmp.hpp  FrogRiverOne.hpp  GenomicRangeQuery.hpp  MaxCounters.hpp  MaxProductOfThree.hpp  MinAvgTwoSlice.hpp  MissingInteger.hpp  OddOccurrencesInArray.hpp  PassingCars.hpp  PermCheck.hpp  PermMissingElem.hpp  TapeEquilibrium.hpp
test/: BinaryGapSuite.hpp  BracketsSuite.hpp  CMakeLists.txt  CountDivSuite.hpp  DistinctSuite.hpp  FrogJmpSuite.hpp  FrogRiverOneSuite.hpp  GenomicRangeQuerySuite.hpp  MaxCountersSuite.hpp  MaxProductOfThreeSuite.hpp  MinAvgTwoSliceSuite.hpp  MissingIntegerSuite.hpp  OddOccurrencesInArraySuite.hpp  PassingCarsSuite.hpp  PermCheckSuite.hpp  PermMissingElemSuite.hpp  TapeEquilibriumSuite.hpp  test.cpp
